[package]
name = "symbolic_execution_of_probabilistic_programs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.4.0"
pest_derive = "2.4.0"
lazy_static = "1.4.0"
num = "0.4"
clap = { version = "4.0.18", features = ["derive"] }
anyhow = "1.0.66"
thiserror = "1.0.37"
z3 = "0.11.2"
tempfile = "3.3.0"
