[package]
#[allow(non_snake_case)]
name = "symProb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.4.0"
pest_derive = "2.4.0"
lazy_static = "1.4.0"
num = "0.4"
clap = { version = "4.1.4", features = ["derive"] }
anyhow = "1.0.66"
thiserror = "1.0.37"
z3 = "0.11.2"
tempfile = "3.3.0"
csv = "1.1.6"
serde = { version = "1.0.152", features = ["derive"] }
remove_dir_all = "0.8.0"
itertools = "0.13.0"
once_cell = "1.19.0"
regex = "1.10.5"
